@@ -1,3 +1,8 @@
+2008-06-03  James Sharpe <jsharpe@svn.gnome.org>
+
+	* jhbuild/versioncontrol/git.py: Fixed _get_externals to handle
+	deleted svn:externals correctly.
+	
 2008-06-03  Christian Persch  <chpe@gnome.org>
 
 	* modulesets/gnome-suites-2.22.modules: libgnomeui branched for 2.22.
